@@ -297,3 +297,6 @@
 #undef HAS_POSIX_MONOTONIC_CLOCK
 
 #undef HAS_MACH_ABSOLUTE_TIME
+
+#undef HAS_GNU_GETAFFINITY_NP
+#undef HAS_BSD_GETAFFINITY_NP
