@@ -239,6 +239,10 @@ OCaml 5.0
   Unix module.
   (Nicolás Ojeda Bär, review by Anil Madhavapeddy)
 
+- #11309: Add Domain.recommended_domain_count.
+  (Christiano Haesbaert, review by David Allsopp, KC Sivaramakrishnan,
+  Gabriel Scherer, Nicolas Ojeda Bar)
+
 ### Tools:
 
 * #11004: Litmus tests for checking the implementation of the
